--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Awesome Website</title>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
-    <h1>MY PROJECTS</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos illo officiis voluptatibus aliquid inventore temporibus non ipsum unde, nemo ab et rerum incidunt perferendis sequi sed voluptate, earum praesentium, neque nam accusamus debitis? Reiciendis vero soluta est temporibus nostrum error rem dolore perferendis voluptatum voluptas architecto unde, recusandae obcaecati libero.
+
+
+  <header>
+    <h1>Welcome to My Awesome Website</h1>
+    <p>A place for learning and exploration.</p>
+  </header>
+
+  
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+
+
+  <main>
+    <h2>About This Website</h2>
+     <p>This is my first website in plp </p>
+
+    <section>
+      <h3>MY Mission</h3>
+      <p>After my studies in plp, i will build solutions as far as tech is concerned.</p>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; 2023 My Awesome Website. All rights reserved.</p>
+    <p>Contact: <a href="blessdaisy6@gmail.com">info@example.com</a></p>
+  </footer>
+
 </body>
 </html>
